Добавил секцию popular

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,6 +7,7 @@
 @import './base/utils'; // Тест на ошибку
 @import './base/containers';
 @import './base/button';
+@import './base/input';
 @import './base/sticky-footer';
 
 /* Blocks */
