--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -21,3 +21,16 @@
       @content;
     }
   }
+
+  @mixin flex-center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  @mixin section-title {
+    text-align: center;
+    font-size: 24px;
+    font-weight: 600;
+    margin-block-end: 17px;
+  }
